--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,6 +20,6 @@ jobs:
           yamllint .
 
       - name: check format
-        run: |
+        run: |-
           shfmt -d .
           yamlfmt -dry -lint .
