--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,10 +16,16 @@ jobs:
 
       - name: check lint
         run: |
-          shellcheck $(shfmt -f hooks/)
+          shellcheck $(shfmt -f hooks/ tests/)
           yamllint .
 
       - name: check format
         run: |-
           shfmt -d .
           yamlfmt -dry -lint .
+
+      - name: build test image
+        run: docker build -t git-hooks-test:latest . -f tests/Dockerfile
+
+      - name: run tests
+        run: ./tests/run
